# fineas

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
Fineas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fineas/: __init__.py  finite_state_machine.py
tests/: test_global.py
