[tool.poetry]
name = "fineas"
version = "0.1.0"
description = ""
authors = ["Chris Blades"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.6"
wrapt = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
